--- a/SeniorProj/Client/Pages/Comm_forum_webpage.razor
+++ b/SeniorProj/Client/Pages/Comm_forum_webpage.razor
@@ -2,6 +2,8 @@
 @using SeniorProj.Shared
 @using NuGet.Protocol
 @inject HttpClient Http
+@inject NavigationManager uriHelper
+
 
 <style>
    .cntrbtn{
@@ -61,79 +63,78 @@
 </style>
 <!-- <!DOCTYPE html> -->
 <html lang="en">
-    <head>
-        <PageTitle>Community Forum</PageTitle>
+<head>
+    <PageTitle>Community Forum</PageTitle>
 
-        <meta charset="utf-8" />
+    <meta charset="utf-8" />
 
-        <link href="droplet.css" type="text/css" rel="stylesheet" /> <!-- implementing the css stylesheet for this web page -->
-    </head>
-    @code{
-        Forum request = new Forum();
+    <link href="droplet.css" type="text/css" rel="stylesheet" /> <!-- implementing the css stylesheet for this web page -->
+</head>
+@code{
+    ForumPost request = new ForumPost();
+}
+<body>
+<div class="newPostBox">
+    <h1>Forum</h1> <!-- this class will hold the new post box for the forum page. can list the new message section at the top-->
+    <div class="newPost">
+        <form method="post">
+            <div class="form-outline mb-4">
+                <input id="name" class="form-control" placeholder="Name" name="name" type="text" @bind="@request.Name" />
+                <label class="form-label" for="name">Name</label>
+            </div> 
+            <div class="form-outline mb-4">
+                <input id="postzip" class="form-control" placeholder="ZIP Code" name="postzip" type="postzip" @bind="@request.Zip" />
+                <label class="form-label" for="postzip">ZIP Code</label>
+            </div>
+            <div class="form-outline mb-4">
+                <label for="message">Message:</label>
+                <textarea id="message" class="form-control" rows="5" cols="33" placeholder="Type your message here." name="message" @bind="@request.Message" ></textarea>
+            </div>
+            <div class="cntrbtn">
+                <input type="button" class="btn btn-primary btn-block mb-4" @onclick="@SubmitOutageReport" value="Create Post">
+            </div>
+        </form>
+    </div>
+</div>
+<br/>
+<div class="forumposts">
+    @if (posts == null)
+    {
+        <p><em>Loading...</em></p>
     }
-    <body>
-    <div class="newPostBox">
-        <h1>Forum</h1> <!-- this class will hold the new post box for the forum page. can list the new message section at the top-->
-        <div class="newPost">
-            <form method="post">
-                <div class="form-outline mb-4">
-                    <input id="name" class="form-control" placeholder="Name" name="name" type="text" @bind="@request.Name" />
-                    <label class="form-label" for="name">Name</label>
-                </div> 
-                <div class="form-outline mb-4">
-                    <input id="postzip" class="form-control" placeholder="ZIP Code" name="postzip" type="postzip" @bind="@request.Zip" />
-                    <label class="form-label" for="postzip">ZIP Code</label>
+    else
+    {
+        <div>
+            @foreach(var c in posts) {
+                <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
+                    <div class="forum-header">
+                        @c.Name, @c.Zip
+                    </div>
+                    @c.Message
                 </div>
-                <div class="form-outline mb-4">
-                    <label for="message">Message:</label>
-                    <textarea id="message" class="form-control" rows="5" cols="33" placeholder="Type your message here." name="message" @bind="@request.Message" ></textarea>
-                </div>
-                <div class="cntrbtn">
-                        <input type="submit" class="btn btn-primary btn-block mb-4" value="Create Post">
-                </div>
-            </form>
-        </div>
-    </div>
-    <br/>
-    <div class="forumposts">
-        @{
-            if (IsPost){
-                string name = Request["name"];
-                string message = Request["message"];
-                int zip = Request["postzip"].AsInt();
-                //INSERT INTO Forum VALUES (@name, @message, @zip)
             }
-            <text>
-                User: @name<br/>
-                Zip Code @zip<br/>
-                @message
-            </text>
-        }
-
-        <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
-            <div class="forum-header">
-                username, zipcode
-            </div>
-            posts by users will be shown here.
         </div>
-        <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
-            <div class="forum-header">
-                username, zipcode
-            </div>
-            And here.
-        </div>
-        <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
-            <div class="forum-header">
-                username, zipcode
-            </div>
-            And here.
-        </div>
-        <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
-            <div class="forum-header">
-                username, zipcode
-            </div>
-            And here.
-        </div>
-    </div>
-    </body>
+    }
+</div>
+</body>
 </html>
+
+
+@code {
+
+    protected async Task SubmitOutageReport()
+    {
+        await Http.PostAsJsonAsync("User/report", @request);
+        uriHelper.NavigateTo(uriHelper.Uri, forceLoad: true);
+    }
+    
+}
+
+
+@code {
+    private ForumPost[]? posts;
+    protected override async Task OnInitializedAsync()
+    {
+        posts = await Http.GetFromJsonAsync<ForumPost[]>("User");
+    }
+}
