--- a/SeniorProj/Client/Pages/Comm_forum_webpage.razor
+++ b/SeniorProj/Client/Pages/Comm_forum_webpage.razor
@@ -4,63 +4,105 @@
 @inject HttpClient Http
 @inject NavigationManager uriHelper
 
-
 <style>
-   .cntrbtn{
-   text-align:  center;
-   }
-   
-   textarea{
-      resize: none;
-      width:  100%;
-      height:  150px;
-      border-radius:  3px;
-      
-     }
-     
-   .newPostBox{
-      text-align:  center;
-      
-      }  
-   .newPost{
-      text-align:  left;
-      max-width: 500px;
-      margin: auto;
-     }     
+    .cntrbtn{
+        text-align:  center;
+    }
+    
+    textarea{
+        resize: none;
+        width:  100%;
+        height:  150px;
+        border-radius:  3px;
+    }
+    
+    #collapsible {
+        background-color: #38B2E3;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        width: 100%;
+        max-width: 500px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+        text-align: center;
+        font-size: 20px;
+    }
+    
+    #collapsible:hover{
+        background-color: #3DC2F7;    
+    }
+    
+    #collapsible:hover{
+            background-color: #3DC2F7;    
+    }
+    
+    #trigger{
+        display: none;
+    }
+    
+    #trigger:checked ~ .newPost{
+        display: none;
+    }
+    
+    #trigger:checked ~ #collapsible{
+        border-radius: 5px;    
+    }
+       
+    .newPostBox{
+        text-align: center;
+    }
+    
+    .newPost{
+        text-align: left;
+        max-width: 500px;
+        border: 2px solid #38B2E3;
+        border-radius: 5px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        padding: 10px;
+        margin: 0 auto;
+    }
+    
     .forum-header{
-    text-align:  left;
-    max-height: 20%;
-    max-width:  50%;
-    margin-bottom:  4px;
+        text-align:  left;
+        font-weight: bold;
+        max-height: 20%;
+        max-width:  100%;
+        margin-bottom:  5px;
+        border-bottom: 2px solid lightgray;
+        padding-bottom: 5px;
     }
     
-     .postBoxes{
-      text-align:  center;
-      border: 2px solid lightgray;
-      border-radius:  5px;
-      margin:  auto;
-      max-height: 100%;
-      max-width: 500px;
-      margin-bottom:  15px;
-      }
-      
+    .postBoxes{
+        text-align: left;
+        border: 2px solid #38B2E3;
+        border-radius: 5px;
+        margin: auto;
+        max-height: 100%;
+        max-width: 500px;
+        margin-bottom: 15px;
+        padding: 10px;
+    }
+    
     .forumposts{
-     text-align:  center;
+        text-align: center;
     }
     
-     h1{
-      margin-bottom: 25px;
-     }
-     
-     .btn-primary{color:#fff;background-color:#38B2E3;border-color:#38B2E3;}
-     .btn-primary:hover{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7}
-     .btn-check:focus+.btn-primary,.btn-primary:focus{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7;box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
-     .btn-check:active+.btn-primary,.btn-check:checked+.btn-primary,.btn-primary.active,.btn-primary:active,.show>.btn-primary.dropdown-toggle{color:#fff;background-color:#0a58ca;border-color:#0a53be}
-     .btn-check:active+.btn-primary:focus,.btn-check:checked+.btn-primary:focus,.btn-primary.active:focus,.btn-primary:active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
-     .btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:#0d6efd;border-color:#0d6efd}        
-      
-     
+    h1{
+        margin-bottom: 15px;
+    }
+    
+    .btn-primary{color:#fff;background-color:#38B2E3;border-color:#38B2E3;}
+    .btn-primary:hover{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7}
+    .btn-check:focus+.btn-primary,.btn-primary:focus{color:#fff;background-color:#3DC2F7;border-color:#3DC2F7;box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+    .btn-check:active+.btn-primary,.btn-check:checked+.btn-primary,.btn-primary.active,.btn-primary:active,.show>.btn-primary.dropdown-toggle{color:#fff;background-color:#0a58ca;border-color:#0a53be}
+    .btn-check:active+.btn-primary:focus,.btn-check:checked+.btn-primary:focus,.btn-primary.active:focus,.btn-primary:active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .25rem rgba(49,132,253,.5)}
+    .btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:#0d6efd;border-color:#0d6efd} 
 </style>
+
 <!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
@@ -76,22 +118,24 @@
 <body>
 <div class="newPostBox">
     <h1>Forum</h1> <!-- this class will hold the new post box for the forum page. can list the new message section at the top-->
+    <input type="checkbox" id="trigger" checked="checked"/>
+    <label for="trigger" id="collapsible">Create Post</label>
     <div class="newPost">
         <form method="post">
             <div class="form-outline mb-4">
-                <input id="name" class="form-control" placeholder="Name" name="name" type="text" @bind="@request.Name" />
                 <label class="form-label" for="name">Name</label>
-            </div> 
+                <input id="name" class="form-control" placeholder="Name" name="name" type="text" @bind="@request.Name"/>
+            </div>
             <div class="form-outline mb-4">
-                <input id="postzip" class="form-control" placeholder="ZIP Code" name="postzip" type="postzip" @bind="@request.Zip" />
                 <label class="form-label" for="postzip">ZIP Code</label>
+                <input id="postzip" class="form-control" placeholder="ZIP Code" name="postzip" type="postzip" @bind="@request.Zip"/>
             </div>
             <div class="form-outline mb-4">
                 <label for="message">Message:</label>
                 <textarea id="message" class="form-control" rows="5" cols="33" placeholder="Type your message here." name="message" @bind="@request.Message" ></textarea>
             </div>
             <div class="cntrbtn">
-                <input type="button" class="btn btn-primary btn-block mb-4" @onclick="@SubmitOutageReport" value="Create Post">
+                <input type="button" class="btn btn-primary btn-block mb-4" @onclick="@SubmitOutageReport" value="Submit">
             </div>
         </form>
     </div>
@@ -105,7 +149,8 @@
     else
     {
         <div>
-            @foreach(var c in posts) {
+            @foreach (var c in posts)
+            {
                 <div class="postBoxes"> <!-- this class will hold the box for each post made to the forum -->
                     <div class="forum-header">
                         @c.Name, @c.Zip
