--- a/SeniorProj/Client/Pages/Index.razor
+++ b/SeniorProj/Client/Pages/Index.razor
@@ -1,11 +1,12 @@
 ﻿@page "/"
 <style>
   .about-us{
-     text-align: center;
+     text-align: left;
      text-indent: 30px;
      line-height: 1.5;
      max-width: 30rem;  
      margin:  auto;
+     
 }
   h1{
      margin-bottom: 25px;
