--- a/SeniorProj/Client/Pages/NaturalDisaster.razor
+++ b/SeniorProj/Client/Pages/NaturalDisaster.razor
@@ -12,7 +12,7 @@
     }
     
     #resources{
-     text-align: center;
+     text-align: left;
      text-indent: 30px;
      line-height: 1.5;
      max-width: 30rem;
@@ -28,7 +28,7 @@
     }
     
     #freezing{
-     text-align: center;
+     text-align: left;
      text-indent: 30px;
      line-height: 1.5;
      max-width: 30rem;
@@ -59,7 +59,7 @@
         to boil water for 1-3 minutes.It is recommended to limit contact with flood water. Flood water may have high levels
         of unknown or hazardous substances. Be sure to stay informed with local news and keep updated on reported damages
         and recovery resources available to you. 
-        <br> 
+         
         <a class="link" href="https://www.epa.gov/waterutilityresponse">More information</a>
     </p>
 
@@ -75,7 +75,7 @@
     throughout the day, or leave a slow drip. Hoses should be removed from exterior faucets and the valves
     should be closed. In the event of a frozen pipe, water should be turned off and a plumber should be 
     notified.
-        <br>
+        
         <a class="link" href="https://www.redcross.org/get-help/how-to-prepare-for-emergencies/types-of-emergencies/winter-storm/frozen-pipes.html">More information</a>
 </p>
 </div>
